# feat_extr_new

./: .gitignore  CMakeLists.txt  DualQuaternion.hpp  README.md  createPC.cpp  dataGenerator.cpp  demonstration_vid_0.json  demonstration_vid_1.json  demonstration_vid_11.json  demonstration_vid_12.json  demonstration_vid_16.json  demonstration_vid_2.json  demonstration_vid_4.json  demonstration_vid_5.json  demonstration_vid_6.json  example-utils.hpp  example.hpp  main.cpp  notes.txt  stb_easy_font.h  surfaceDataProcessing.cpp  surfaceExtractor.cpp  surfaceProximity.cpp  test.cpp  trajectoryPlotting.cpp  velocityFeatures.cpp  voxelExtraction.cpp
config/: dataGeneratorParameters.json  surfaceExtractionArguments.json  visualPerceptionParameters.json
data/: demonstration_2023-03-17-17-11-02_426849468.json  demonstration_2023-05-19-16-23-07_771535671.json  demonstration_2023-05-19-16-24-31_679894510.json  demonstration_2023-05-19-16-25-09_343253856.json  demonstration_2023-05-19-16-26-17_153645882.json  demonstration_2023-05-19-17-43-59_555612172.json  demonstration_2023-05-19-17-44-41_463706728.json  demonstration_2023-06-21-15-53-28_300350939.json  demonstration_2023-06-21-15-58-57_997331046.json  demonstration_2023-06-21-18-01-30_420591621.json  demonstration_2023-06-21-18-53-52_129873292.json  demonstration_2023-07-20-16-26-29_182915938_with_3_const_speed_regions.json  demonstration_2023-07-20-17-21-48_233927560_with_2to3_spiking_motions.json  demonstration_2023-07-20-17-24-27_070619711_with_3_spiking_motions.json  demonstration_2023-07-20-17-26-58_950091230_with_3to4_acc_dec_pairs.json  demonstration_2023-07-20-17-29-05_898475101_with_3to4_acc_dec_pairs.json  demonstration_2023-07-20-17-31-29_472052090_with_4_spiking_motions.json  demonstration_2023-07-20-17-50-18_304304632_1linear_2wavy_const_speeds.json  demonstration_2023-07-20-17-52-07_079388386_1wavy_2lin_1wavy_const_speed.json  demonstration_2023-07-20-17-54-05_890261173_with_3_acc_dec_pairs.json  surfaceData_2023-06-21-11-41-19_799229444.json  surfaceData_2023-06-21-13-33-04_490806946.json  surfaceData_2023-06-21-14-37-16_946365807.json  surfaceData_2023-06-21-19-03-38_120429126.json  surfaceData_2023-06-22-18-54-34_713399917.json  surfaceData_2023-06-22-18-59-57_489446077.json
scripts/: plot_trajectory.py  plotting.py
